--- a/clusters/local/flux-system/sealed-secrets.yaml
+++ b/clusters/local/flux-system/sealed-secrets.yaml
@@ -9,7 +9,7 @@ spec:
       chart: sealed-secrets
       sourceRef:
         kind: HelmRepository
-        name: stable
+        name: bitnami
       version: "1.13.2"
   interval: 1h0m0s
   releaseName: sealed-secrets
